--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
             </div>
             <div style="clear:both;"/>
         </div>
+        <h2>Please report any issues with botchat on [Github](https://github.com/billba/botchat/issues)</h1
     </body>
 </html>
