or, you know, in html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
             </div>
             <div style="clear:both;"/>
         </div>
-        <h2>Please report any issues with botchat on [Github](https://github.com/billba/botchat/issues)</h1
+        <h2>Please report any issues with botchat on <a href="https://github.com/billba/botchat/issues">github</a></h2>
     </body>
 </html>
