--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button onclick="sendMessage(document.getElementById('message').value)">Send Message To Bot</button>
             </div>
             <div style="margin-left: 320px;">
-                <iframe id="botchat" src="/botchat/?t=<%= token %>" width="400" height="500"/>
+                <iframe id="botchat" src="/botchat/?t=<%= token %>" width="400" height="500"></iframe>
             </div>
             <div style="clear:both;"/>
         </div>
