actually make folks type this in

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </p>
                     <p>
                         <label for="allowMessagesFrom">Allow messages from websites hosted at: </label>
-                        <input id="allowMessagesFrom" name="allowMessagesFrom" type="text" style="width:300px;" value="<%= allowMessagesFrom || 'https://botchattest.herokuapp.com' %>" placeholder="http://localhost:3000, http://bill.barnacle.org"/>
+                        <input id="allowMessagesFrom" name="allowMessagesFrom" type="text" style="width:300px;" value="<%= allowMessagesFrom %>" placeholder="http://localhost:3000, http://bill.barnacle.org"/>
                     </p>
                     <p>
                         <input type="submit"/>
