--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <input type="submit"/>
                     </p>
                 </form>
-                <h1>Messaging</h1>
+                <h1>Backchannel</h1>
                 <textarea id="message" rows="5" cols="40"></textarea>
                 <button onclick="sendMessage(document.getElementById('message').value)">Send Message To Bot</button>
             </div>
