--- a/botchat/index.html
+++ b/botchat/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="BotChatGoesHere"></div>
-        <script src="https://fb.me/react-15.2.1.min.js"></script>
-        <script src="https://fb.me/react-dom-15.2.1.min.js"></script>
+        <script src="https://unpkg.com/react@15.3.2/dist/react.min.js">"></script>
+        <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.min.js">"></script>
         <script src="botchat.js"></script>
         <script>
             var params = {};
@@ -21,10 +21,10 @@
                     params[p[0]] = p[1];
                 });
 
-            ReactDOM.render(React.createElement(BotChat.UI, {
+            ReactDOM.render(React.createElement(BotChat.App, {
                 secret: params['s'],
                 token: params['t'],
-                debug: params['debug']
+                user: { id: 'userid', name: 'username' } // for convenient testing/demo - should normally be overwritten by below
                 // ADD MORE CONFIG HERE
             }), document.getElementById("BotChatGoesHere"));
         </script>
