updated botchat, can now toggle header on/off

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <input id="secret" name="secret" type="text" style="width:300px;" value="<%= secret %>" placeholder="leave blank for featurebot"/>
                     </p>
                     <p>
-                        <label for="title">Title</label>
-                        <input id="title" name="title" type="text" style="width:300px;" value="<%= title %>" placeholder="leave blank for default"/>
+                        <label for="showHeader">ShowHeader</label>
+                        <input id="showHeader" name="showHeader" type="text" style="width:300px;" value="<%= showHeader %>" placeholder="leave blank for false"/>
                     </p>
                     <p>
                         <label for="allowMessagesFrom">Allow messages from websites hosted at: </label>
